finished menu page layout

--- a/menu.html
+++ b/menu.html
@@ -185,12 +185,78 @@
         </section>
         <!--section break-->
         <section class="section-break section">
-            <div class="description">
+            <div class="paint-stroke"><img src="./dist/images/paint-stroke-white.png" alt="White Paint Stroke"></div>
+            <div class="description container">
                 <div class="title">
-                    <h2></h2>
+                    <h2>Meals</h2>
                 </div>
-                <h1></h1>
-                <p></p>
+                <h1>COMBO OFFERS</h1>
+                <p>Get your favorite entree as a meal and save up to 10% on certain items.</p>
+            </div>
+        </section>
+        <!--combos-->
+        <section class="combos section">
+            <div class="combos-top section-wrap container">
+                <div class="combo-list">
+                    <div class="menu-description">
+                        <div class="section-wrap">
+                            <h3 class="name">CHEESEBURGER</h3>
+                            <span class="line"></span>
+                            <h3 class="price">$3.99</h3>
+                        </div>
+                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                    </div>
+                    <div class="menu-description">
+                        <div class="section-wrap">
+                            <h3 class="name">CHEESEBURGER</h3>
+                            <span class="line"></span>
+                            <h3 class="price">$3.99</h3>
+                        </div>
+                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                    </div>
+                    <div class="menu-description">
+                        <div class="section-wrap">
+                            <h3 class="name">CHEESEBURGER</h3>
+                            <span class="line"></span>
+                            <h3 class="price">$3.99</h3>
+                        </div>
+                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                    </div>
+                </div>
+                <div class="combo-img">
+                    <img src="./dist/images/tenders.png">
+                </div>
+            </div>
+            <div class="combos-bottom section-wrap container">
+                <div class="combo-img">
+                    <img src="./dist/images/burger-entree.png">
+                </div>
+                <div class="combo-list">
+                    <div class="menu-description">
+                        <div class="section-wrap">
+                            <h3 class="name">CHEESEBURGER</h3>
+                            <span class="line"></span>
+                            <h3 class="price">$3.99</h3>
+                        </div>
+                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                    </div>
+                    <div class="menu-description">
+                        <div class="section-wrap">
+                            <h3 class="name">CHEESEBURGER</h3>
+                            <span class="line"></span>
+                            <h3 class="price">$3.99</h3>
+                        </div>
+                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                    </div>
+                    <div class="menu-description">
+                        <div class="section-wrap">
+                            <h3 class="name">CHEESEBURGER</h3>
+                            <span class="line"></span>
+                            <h3 class="price">$3.99</h3>
+                        </div>
+                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
