finished text and aos for elements

--- a/menu.html
+++ b/menu.html
@@ -74,7 +74,7 @@
             </div>
             <div class="section-wrap container">
                 <div class="entree-left">
-                    <div class="menu-item">
+                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
                         <div class="menu-img">
                             <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
                         </div>
@@ -87,97 +87,97 @@
                             <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
                         </div>
                     </div>
-                    <div class="menu-item">
+                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
                         <div class="menu-img">
-                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                            <img src="./dist/images/dbl-stack.png" alt="Cheeseburger">
                         </div>
                         <div class="menu-description">
                             <div class="section-wrap">
-                                <h3 class="name">CHEESEBURGER</h3>
+                                <h3 class="name">DOUBLESTACK</h3>
                                 <span class="line"></span>
-                                <h3 class="price">$3.99</h3>
+                                <h3 class="price">$7.99</h3>
                             </div>
-                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                            <p>Ever feel like one is not enough? Try the new Double Stack if you can take it!</p>
                         </div>
                     </div>
-                    <div class="menu-item">
+                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
                         <div class="menu-img">
-                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                            <img src="./dist/images/nuggets.png" alt="Cheeseburger">
                         </div>
                         <div class="menu-description">
                             <div class="section-wrap">
-                                <h3 class="name">CHEESEBURGER</h3>
+                                <h3 class="name">NUGGETS</h3>
                                 <span class="line"></span>
-                                <h3 class="price">$3.99</h3>
+                                <h3 class="price">$5.00</h3>
                             </div>
-                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                            <p>For all the folks with a spicy tooth. It's time to kick it up a notch.</p>
                         </div>
                     </div>
-                    <div class="menu-item">
+                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
                         <div class="menu-img">
-                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                            <img src="./dist/images/muffins.png" alt="Cheeseburger">
                         </div>
                         <div class="menu-description">
                             <div class="section-wrap">
-                                <h3 class="name">CHEESEBURGER</h3>
+                                <h3 class="name">MUFFINS</h3>
                                 <span class="line"></span>
-                                <h3 class="price">$3.99</h3>
+                                <h3 class="price">$1.99</h3>
                             </div>
-                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                            <p>Our classic muffins serve as a good, quick and cheap way to cleanse your pallet.</p>
                         </div>
                     </div>
                 </div>
                 <div class="entree-right">
-                    <div class="menu-item">
+                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
                         <div class="menu-img">
-                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                            <img src="./dist/images/chicken-sandwich.png" alt="Cheeseburger">
                         </div>
                         <div class="menu-description">
                             <div class="section-wrap">
-                                <h3 class="name">CHEESEBURGER</h3>
+                                <h3 class="name">CHICKEN</h3>
                                 <span class="line"></span>
-                                <h3 class="price">$3.99</h3>
+                                <h3 class="price">$4.99</h3>
                             </div>
-                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                            <p>Due to popular demand, we brought back this simple, delicious gem.</p>
                         </div>
                     </div>
-                    <div class="menu-item">
+                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
                         <div class="menu-img">
-                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                            <img src="./dist/images/dlx-dog.png" alt="Cheeseburger">
                         </div>
                         <div class="menu-description">
                             <div class="section-wrap">
-                                <h3 class="name">CHEESEBURGER</h3>
+                                <h3 class="name">DELUXEDOG</h3>
                                 <span class="line"></span>
-                                <h3 class="price">$3.99</h3>
+                                <h3 class="price">$4.99</h3>
                             </div>
-                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                            <p>Our delicious, filling hot dogs come fresh, right off the grill!</p>
                         </div>
                     </div>
-                    <div class="menu-item">
+                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
                         <div class="menu-img">
-                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                            <img src="./dist/images/tenders.png" alt="Cheeseburger">
                         </div>
                         <div class="menu-description">
                             <div class="section-wrap">
-                                <h3 class="name">CHEESEBURGER</h3>
+                                <h3 class="name">TENDERS</h3>
                                 <span class="line"></span>
                                 <h3 class="price">$3.99</h3>
                             </div>
-                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                            <p>Each crunch of these bad boys will make you drool for more.</p>
                         </div>
                     </div>
-                    <div class="menu-item">
+                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
                         <div class="menu-img">
-                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                            <img src="./dist/images/shakes.png" alt="Cheeseburger">
                         </div>
                         <div class="menu-description">
                             <div class="section-wrap">
-                                <h3 class="name">CHEESEBURGER</h3>
+                                <h3 class="name">SHAKES</h3>
                                 <span class="line"></span>
-                                <h3 class="price">$3.99</h3>
+                                <h3 class="price">$2.99</h3>
                             </div>
-                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                            <p>The smoothest shake you will probably try, now a fraction of the price before!</p>
                         </div>
                     </div>
                 </div>
@@ -198,63 +198,63 @@
         <section class="combos section">
             <div class="combos-top section-wrap container">
                 <div class="combo-list">
-                    <div class="menu-description">
+                    <div class="menu-description" data-aos="fade-up-right" data-aos-duration="1000">
                         <div class="section-wrap">
-                            <h3 class="name">CHEESEBURGER</h3>
+                            <h3 class="name">NUGGETS</h3>
                             <span class="line"></span>
-                            <h3 class="price">$3.99</h3>
+                            <h3 class="price">$7.00</h3>
                         </div>
-                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                        <p>For all the folks with a spicy tooth. It's time to kick it up a notch.</p>
                     </div>
-                    <div class="menu-description">
+                    <div class="menu-description" data-aos="fade-up-right" data-aos-duration="1000">
                         <div class="section-wrap">
-                            <h3 class="name">CHEESEBURGER</h3>
+                            <h3 class="name">CHICKEN</h3>
                             <span class="line"></span>
-                            <h3 class="price">$3.99</h3>
+                            <h3 class="price">$6.99</h3>
                         </div>
-                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                        <p>Due to popular demand, we brought back this simple, delicious gem.</p>
                     </div>
-                    <div class="menu-description">
+                    <div class="menu-description" data-aos="fade-up-right" data-aos-duration="1000">
                         <div class="section-wrap">
-                            <h3 class="name">CHEESEBURGER</h3>
+                            <h3 class="name">TENDERS</h3>
                             <span class="line"></span>
-                            <h3 class="price">$3.99</h3>
+                            <h3 class="price">$5.99</h3>
                         </div>
-                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                        <p>Each crunch of these bad boys will make you drool for more.</p>
                     </div>
                 </div>
-                <div class="combo-img">
+                <div class="combo-img" data-aos="fade-left" data-aos-duration="1000">
                     <img src="./dist/images/tenders.png">
                 </div>
             </div>
             <div class="combos-bottom section-wrap container">
-                <div class="combo-img">
+                <div class="combo-img" data-aos="fade-right" data-aos-duration="1000">
                     <img src="./dist/images/burger-entree.png">
                 </div>
                 <div class="combo-list">
-                    <div class="menu-description">
+                    <div class="menu-description" data-aos="fade-up-left" data-aos-duration="1000">
                         <div class="section-wrap">
                             <h3 class="name">CHEESEBURGER</h3>
                             <span class="line"></span>
-                            <h3 class="price">$3.99</h3>
+                            <h3 class="price">$5.99</h3>
                         </div>
                         <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
                     </div>
-                    <div class="menu-description">
+                    <div class="menu-description" data-aos="fade-up-left" data-aos-duration="1000">
                         <div class="section-wrap">
-                            <h3 class="name">CHEESEBURGER</h3>
+                            <h3 class="name">DELUXEDOG</h3>
                             <span class="line"></span>
-                            <h3 class="price">$3.99</h3>
+                            <h3 class="price">$6.99</h3>
                         </div>
-                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                        <p>Our delicious, filling hot dogs come fresh, right off the grill!</p>
                     </div>
-                    <div class="menu-description">
+                    <div class="menu-description" data-aos="fade-up-left" data-aos-duration="1000">
                         <div class="section-wrap">
-                            <h3 class="name">CHEESEBURGER</h3>
+                            <h3 class="name">DOUBLESTACK</h3>
                             <span class="line"></span>
-                            <h3 class="price">$3.99</h3>
+                            <h3 class="price">$9.99</h3>
                         </div>
-                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                        <p>Ever feel like one is not enough? Try the new Double Stack if you can take it!</p>
                     </div>
                 </div>
             </div>
