styling contact page complete

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 
     <!--main-->
     <main class="contact-main">
-        <section class="form section-wrap">
+        <section class="section-wrap container">
             <form>
                 <input type="text" placeholder="Your Name" class="input">
                 <input type="email" placeholder="Your Email" class="input">
