header is not fixed anymorw

--- a/menu.html
+++ b/menu.html
@@ -74,7 +74,8 @@
             </div>
             <div class="section-wrap container">
                 <div class="entree-left">
-                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="menu-item" data-aos="fade-up"
+                    data-aos-duration="750">
                         <div class="menu-img">
                             <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
                         </div>
@@ -87,7 +88,8 @@
                             <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
                         </div>
                     </div>
-                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="menu-item" data-aos="fade-up"
+                    data-aos-duration="750">
                         <div class="menu-img">
                             <img src="./dist/images/dbl-stack.png" alt="Cheeseburger">
                         </div>
@@ -100,7 +102,8 @@
                             <p>Ever feel like one is not enough? Try the new Double Stack if you can take it!</p>
                         </div>
                     </div>
-                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="menu-item" data-aos="fade-up"
+                    data-aos-duration="750">
                         <div class="menu-img">
                             <img src="./dist/images/nuggets.png" alt="Cheeseburger">
                         </div>
@@ -113,7 +116,8 @@
                             <p>For all the folks with a spicy tooth. It's time to kick it up a notch.</p>
                         </div>
                     </div>
-                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="menu-item" data-aos="fade-up"
+                    data-aos-duration="750">
                         <div class="menu-img">
                             <img src="./dist/images/muffins.png" alt="Cheeseburger">
                         </div>
@@ -128,7 +132,8 @@
                     </div>
                 </div>
                 <div class="entree-right">
-                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="menu-item" data-aos="fade-up"
+                    data-aos-duration="750">
                         <div class="menu-img">
                             <img src="./dist/images/chicken-sandwich.png" alt="Cheeseburger">
                         </div>
@@ -141,7 +146,8 @@
                             <p>Due to popular demand, we brought back this simple, delicious gem.</p>
                         </div>
                     </div>
-                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="menu-item" data-aos="fade-up"
+                    data-aos-duration="750">
                         <div class="menu-img">
                             <img src="./dist/images/dlx-dog.png" alt="Cheeseburger">
                         </div>
@@ -154,7 +160,8 @@
                             <p>Our delicious, filling hot dogs come fresh, right off the grill!</p>
                         </div>
                     </div>
-                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="menu-item" data-aos="fade-up"
+                    data-aos-duration="750">
                         <div class="menu-img">
                             <img src="./dist/images/tenders.png" alt="Cheeseburger">
                         </div>
@@ -167,7 +174,8 @@
                             <p>Each crunch of these bad boys will make you drool for more.</p>
                         </div>
                     </div>
-                    <div class="menu-item" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="menu-item" data-aos="fade-up"
+                    data-aos-duration="750">
                         <div class="menu-img">
                             <img src="./dist/images/shakes.png" alt="Cheeseburger">
                         </div>
@@ -198,7 +206,8 @@
         <section class="combos section">
             <div class="combos-top section-wrap container">
                 <div class="combo-list">
-                    <div class="menu-description" data-aos="fade-up-right" data-aos-duration="1000">
+                    <div class="menu-description" data-aos="fade-up-right"
+                    data-aos-duration="750">
                         <div class="section-wrap">
                             <h3 class="name">NUGGETS</h3>
                             <span class="line"></span>
@@ -206,7 +215,8 @@
                         </div>
                         <p>For all the folks with a spicy tooth. It's time to kick it up a notch.</p>
                     </div>
-                    <div class="menu-description" data-aos="fade-up-right" data-aos-duration="1000">
+                    <div class="menu-description" data-aos="fade-up-right"
+                    data-aos-duration="750">
                         <div class="section-wrap">
                             <h3 class="name">CHICKEN</h3>
                             <span class="line"></span>
@@ -214,7 +224,8 @@
                         </div>
                         <p>Due to popular demand, we brought back this simple, delicious gem.</p>
                     </div>
-                    <div class="menu-description" data-aos="fade-up-right" data-aos-duration="1000">
+                    <div class="menu-description" data-aos="fade-up-right"
+                    data-aos-duration="750">
                         <div class="section-wrap">
                             <h3 class="name">TENDERS</h3>
                             <span class="line"></span>
@@ -223,16 +234,19 @@
                         <p>Each crunch of these bad boys will make you drool for more.</p>
                     </div>
                 </div>
-                <div class="combo-img" data-aos="fade-left" data-aos-duration="1000">
+                <div class="combo-img" data-aos="fade-left"
+                data-aos-duration="750">
                     <img src="./dist/images/tenders.png">
                 </div>
             </div>
             <div class="combos-bottom section-wrap container">
-                <div class="combo-img" data-aos="fade-right" data-aos-duration="1000">
+                <div class="combo-img" data-aos="fade-right"
+                data-aos-duration="750">
                     <img src="./dist/images/burger-entree.png">
                 </div>
                 <div class="combo-list">
-                    <div class="menu-description" data-aos="fade-up-left" data-aos-duration="1000">
+                    <div class="menu-description" data-aos="fade-up-left"
+                    data-aos-duration="750">
                         <div class="section-wrap">
                             <h3 class="name">CHEESEBURGER</h3>
                             <span class="line"></span>
@@ -240,7 +254,8 @@
                         </div>
                         <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
                     </div>
-                    <div class="menu-description" data-aos="fade-up-left" data-aos-duration="1000">
+                    <div class="menu-description" data-aos="fade-up-left"
+                    data-aos-duration="750">
                         <div class="section-wrap">
                             <h3 class="name">DELUXEDOG</h3>
                             <span class="line"></span>
@@ -248,7 +263,8 @@
                         </div>
                         <p>Our delicious, filling hot dogs come fresh, right off the grill!</p>
                     </div>
-                    <div class="menu-description" data-aos="fade-up-left" data-aos-duration="1000">
+                    <div class="menu-description" data-aos="fade-up-left"
+                    data-aos-duration="750">
                         <div class="section-wrap">
                             <h3 class="name">DOUBLESTACK</h3>
                             <span class="line"></span>
