fixed active desktop links

--- a/contact.html
+++ b/contact.html
@@ -38,10 +38,10 @@
             </div>
             <nav class="desktop-nav">
                 <ul>
-                    <li><a href="index.html" class="active">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="menu.html">MENU</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="contact.html" class="active">CONTACT</a></li>
                 </ul>
                 <ul class="social-links">
                     <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
