--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
             </div>
             <nav class="desktop-nav">
                 <ul>
-                    <li><a href="index.html" class="active">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="about.html" class="active">ABOUT</a></li>
                     <li><a href="menu.html">MENU</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
