--- a/menu.html
+++ b/menu.html
@@ -38,9 +38,9 @@
             </div>
             <nav class="desktop-nav">
                 <ul>
-                    <li><a href="index.html" class="active">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="menu.html" class="active">MENU</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
                 <ul class="social-links">
